@@ -218,6 +218,7 @@ KSpreadTable::KSpreadTable( KSpreadMap *_map, const QString &tableName, const ch
   m_bLcMode=false;
   m_bShowColumnNumber=false;
   m_bHideZero=false;
+  m_bFirstLetterUpper=false;
   // Get a unique name so that we can offer scripting
   if ( !_name )
   {
@@ -5762,6 +5763,7 @@ QDomElement KSpreadTable::save( QDomDocument& doc )
     table.setAttribute( "lcmode", (int)m_bLcMode);
     table.setAttribute( "columnnumber", (int)m_bShowColumnNumber);
     table.setAttribute( "hidezero", (int)m_bHideZero);
+    table.setAttribute( "firstletterupper", (int)m_bFirstLetterUpper);
     // Save all cells.
     KSpreadCell* c = m_cells.firstCell();
     for( ;c; c = c->nextCell() )
@@ -5863,7 +5865,11 @@ bool KSpreadTable::loadXML( const QDomElement& table )
         m_bHideZero = (int)table.attribute("hidezero").toInt( &ok );
         // we just ignore 'ok' - if it didn't work, go on
     }
-
+    if( table.hasAttribute( "firstletterupper" ) )
+    {
+        m_bFirstLetterUpper = (int)table.attribute("firstletterupper").toInt( &ok );
+        // we just ignore 'ok' - if it didn't work, go on
+    }
     // Load the cells
     QDomNode n = table.firstChild();
     while( !n.isNull() )
